--- a/styles.css
+++ b/styles.css
@@ -376,6 +376,14 @@ ul li a:hover{
   flex-direction: column;
 }
 
+.projects a{
+  margin: 0 10px;
+}
+
+.leftText{
+  text-align: left;
+}
+
 @media (max-width: 850px){
   .evenlySpaced{
     flex-direction: column;
