--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ ul{
   cursor: pointer;
 }
 
+.marginLeft5Percent{
+  margin-left: 5%;
+}
+
 .test{
   height: 200vh;
 }
@@ -101,7 +105,7 @@ nav{
                         Landing
 ----------------------------//----------------------- */
 
-.landing{
+.backgroundImage{
   background-image: url("./BackgroundCode.png");
   filter: blur(3px);
   -webkit-filter: blur(3px);
@@ -109,4 +113,89 @@ nav{
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+}
+
+.landing{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.landing h3{
+  color: white;
+  font-size: 35px;
+  margin: 0;
+  height: 35px;
+}
+
+.landing h1{
+  color: #00C8A1;
+  font-size: 120px;
+  padding-top: 15px;
+  padding-bottom: 35px;
+  margin: 0;
+  height: 120px;
+}
+
+.landing p{
+  color: white;
+  font-size: 25px;
+  margin: 0;
+  padding-top: 10px;
+  padding-bottom: 50px;
+  height: 25px;
+}
+
+@media (max-width: 1100px) {
+  .landing h3{
+    font-size: 20px;
+    height: 20px;
+  }
+
+  .landing h1{
+    font-size: 80px;
+    height: 80px;
+  }
+
+  .landing p{
+    font-size: 15px;
+    height: 15px;
+  }
+}
+
+@media (max-width: 650px) {
+  .landing h3{
+    font-size: 20px;
+    height: 20px;
+  }
+
+  .landing h1{
+    font-size: 60px;
+    height: 60px;
+  }
+
+  .landing p{
+    font-size: 15px;
+    height: 15px;
+  }
+}
+
+@media (max-width: 500px) {
+  .landing h3{
+    font-size: 20px;
+    height: 20px;
+  }
+
+  .landing h1{
+    font-size: 35px;
+    height: 35px;
+  }
+
+  .landing p{
+    font-size: 15px;
+    height: 15px;
+  }
 }
