--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@
 }
 
 body{
+  background-color: #212121;
+}
+
+.container{
+  max-width: 1500px;
+  margin: 0 auto;
+  width: 85%;
 }
 
 .flex{
@@ -23,8 +30,34 @@ ul{
   margin-left: 5%;
 }
 
-.test{
-  height: 200vh;
+.margin0Auto{
+  margin: 0 auto;
+}
+
+h3{
+  font-size: 35px;
+  color: #00C8A1;
+  margin: 0 10px;
+}
+
+hr{
+  border: 3px solid #00C8A1;
+}
+
+.subtitle{
+  padding-top: 35px;
+  align-items: center;
+  flex-direction: column;
+}
+
+@media (max-width: 1100px) {
+  h3{
+    font-size: 20px;
+    margin: 0 5px;
+  }
+  hr{
+    border: 1px solid #00C8A1;
+  }
 }
 
 /* -----------------------------//-------------------------
@@ -38,7 +71,7 @@ nav{
   transition: all .5s;
   z-index: 5;
   top: 0;
-  background-color: rgba(0, 0, 0, 0.0);
+  background-color: #212121;
 }
 
 .navigation {
@@ -132,7 +165,7 @@ nav{
 }
 
 .landing h1{
-  color: #00C8A1;
+  color: #00c8a1;
   font-size: 120px;
   padding-top: 15px;
   padding-bottom: 35px;
@@ -199,3 +232,72 @@ nav{
     height: 15px;
   }
 }
+
+/* ------------------------//--------------------------
+                        Main Content
+-------------------------//-------------------------- */
+
+.card{
+  width: 100%;
+  height: 300px;
+  margin: 40px 0;
+}
+
+.flex40{
+  flex: 40%;
+  justify-content: center;
+}
+
+.flex60{
+  flex: 60%;
+}
+
+.image{
+  height: 300px;
+  width: 300px;
+  border: 3px solid white;
+  border-radius: 5px;
+}
+
+.image img{
+  height: 100%;
+  width: 100%;
+}
+
+.content{
+  margin-left: 20px;
+  flex: 60%;
+  color: white;
+}
+
+.content h4{
+  font-size: 25px;
+}
+
+.content p{
+  margin: 15px 0;
+}
+
+.end{
+  justify-content: flex-end;
+}
+
+.end i{
+  margin-left: 10px;
+}
+
+.start{
+  justify-content: flex-start;
+}
+
+.start i{
+  margin-right: 10px;
+}
+
+.icons i{
+  font-size: 20px;
+}
+
+@media (max-width: 800px) {
+}
+
