--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
 .container{
   max-width: 1500px;
   margin: 0 auto;
-  width: 85%;
+  width: 82%;
 }
 
 .flex{
@@ -32,7 +32,7 @@ ul{
 }
 
 .marginLeft5Percent{
-  margin-left: 5%;
+  margin-left: 8%;
 }
 
 .margin0Auto{
@@ -57,6 +57,10 @@ hr{
 
 a{
   color: white;
+}
+
+.noUnderline{
+  text-decoration: none !important;
 }
 
 @media (max-width: 1100px) {
@@ -189,6 +193,25 @@ nav{
   padding-top: 10px;
   padding-bottom: 50px;
   height: 25px;
+}
+
+#landing button{
+  position: absolute;
+  border-radius: 50%;
+  bottom: 25px;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  background-color: rgba(33, 33, 33, 0.0);
+  border: 3px solid rgb(155, 155, 155);
+  font-size: 20px;
+  color: rgb(155, 155, 155);
+}
+
+#landing button:hover{
+  border: 3px solid white;
+  color: white;
+  cursor: pointer;
 }
 
 @media (max-width: 1100px) {
@@ -362,6 +385,46 @@ nav{
   align-items: center;
 }
 
+.footer{
+  margin: 60px 0px 30px 0px;
+}
+
 @media (max-width: 800px) {
 }
 
+/* -----------------//---------------
+                  aside
+-------------------//------------------- */
+
+.aside{
+  width: 7%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.format{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 35px;
+  position: fixed;
+  bottom: 0;
+  top: 60%;
+}
+
+.format a{
+  margin: 20px 0;
+}
+
+.vl{
+  border-left: 1px solid white;
+  height: 100%;
+}
+
+@media (max-width: 800px) {
+}
