--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
 body{
   background-color: #212121;
+  overflow-x: hidden;
 }
 
 .container{
@@ -84,7 +85,7 @@ button{
 
 nav{
   height: 80px;
-  width: 100vw;
+  width: 100%;
   position: fixed;
   transition: all .5s;
   z-index: 5;
@@ -136,6 +137,7 @@ nav{
   margin: 0 30px;
 }
 
+
 @media (max-width: 800px) {
 
   .webView {
@@ -148,6 +150,35 @@ nav{
 
   .checkbtn{
     display: inline;
+  }
+
+  #popup{
+    top:0;
+    right:100%;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(33, 33, 33, 1.0);
+    transition: all .5s;
+  }
+
+  #popup ul{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+  }
+
+  #popup i{
+    color: white;
+    position: absolute;
+    right: 30px;
+    font-size: 30px;
+    line-height: 80px;
+    cursor: pointer;
   }
 }
 
@@ -415,7 +446,7 @@ nav{
   }
 
   .card{
-    height: 100%;
+    height: auto;
   }
 
   .end{
@@ -442,6 +473,23 @@ nav{
     color: white;
     cursor: pointer;
     text-decoration: none !important;
+  }
+
+  .flex60{
+    flex: auto;
+    margin-bottom: 15px;
+  }
+
+  .flex40{
+    flex: auto;
+  }
+
+  .flex33{
+    flex: auto;
+  }
+
+  .flex50{
+    flex: auto;
   }
 }
 
