--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,23 @@ button{
   }
 }
 
+@media (max-width: 800px) {
+  .container{
+    max-width: 1500px;
+    margin: 0;
+    width: 100%;
+    overflow-x: hidden;
+  }
+
+  .subtitle{
+    padding-top: 35px;
+    align-items: center;
+    width: 82%;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+} 
+
 
 /* -----------------------------//-------------------------
                           nav Component
@@ -193,7 +210,7 @@ nav{
 ----------------------------//----------------------- */
 
 .backgroundImage{
-  background-image: url("./BackgroundCode.png");
+  background-image: url("./images/BackgroundCode.png");
   filter: blur(3px);
   -webkit-filter: blur(3px);
   background-position: center;
